Upgrading to Wicket 10, Spring 6 and related Jakarta EE specs